@@ -1,4 +1,4 @@
-# Generated by roxygen2 (4.1.0): do not edit by hand
+# Generated by roxygen2: do not edit by hand
 
 S3method(confint,RSA)
 S3method(fitted,RSA)
@@ -26,3 +26,25 @@ import(lavaan)
 import(tcltk)
 import(tkrplot)
 importFrom(aplpack,compute.bagplot)
+importFrom(grDevices,colorRamp)
+importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,contourLines)
+importFrom(grDevices,dev.new)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,jpeg)
+importFrom(grDevices,rgb)
+importFrom(graphics,lines)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(graphics,text)
+importFrom(stats,formula)
+importFrom(stats,influence.measures)
+importFrom(stats,lm)
+importFrom(stats,na.exclude)
+importFrom(stats,na.omit)
+importFrom(stats,pf)
+importFrom(stats,pt)
+importFrom(stats,quantile)
+importFrom(stats,rnorm)
+importFrom(stats,var)
+importFrom(utils,packageDescription)
