@@ -1,0 +1,5 @@
+#' @importFrom grDevices colorRamp colorRampPalette contourLines dev.new dev.off jpeg rgb
+#' @importFrom graphics lines plot points text
+#' @importFrom stats formula influence.measures lm na.exclude na.omit pf pt quantile rnorm var
+#' @importFrom utils packageDescription
+NULL
