@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/RSA.ST.R
 \name{RSA.ST}
 \alias{RSA.ST}
@@ -20,18 +20,18 @@ RSA.ST(x = 0, y = 0, x2 = 0, xy = 0, y2 = 0, b0 = 0, SE = NULL,
 
 \item{b0}{The intercept}
 
-\item{SE}{In case that the coefficients are provided directly (as parameters x, y, x2, y2, xy), SE can provide the standard errors of these estimates. SE has to be a named vector, e.g.: \code{SE=c(x=.1, y=.2, x2=.1, y2=.5, xy=.3)}. SEs of all parameters have to provided, otherwise the function will print an error. In case standard errors \emph{and} the covariances (see below) \emph{and} df (see below) are provided, parametric confidence intervals for a1 to a4 are calculated.}
+\item{SE}{In case that the coefficients are provided directly (as parameters x, y, x2, y2, xy), SE can provide the standard errors of these estimates. SE has to be a named vector with exactly five elements with the names of the coefficients, e.g.: \code{SE=c(x=.1, y=.2, x2=.1, y2=.5, xy=.3)}. SEs of all parameters have to provided, otherwise the function will print an error. In case standard errors \emph{and} the covariances (see below) \emph{and} df (see below) are provided, parametric confidence intervals for a1 to a4 are calculated.}
 
-\item{COV}{Covariances between parameters. COV has to be a named vector, e.g.: \code{COV=c(x_y=.1, x2_y2 = .2, x2_xy = .3, y2_xy = .4)}, where x_y is the covariance between x and y, and so on. All these covariances have to provided with exactly these names, otherwise the function will print an error.}
+\item{COV}{Covariances between parameters. COV has to be a named vector with exactly four elements with the names of four specific covariances, e.g.: \code{COV=c(x_y=.1, x2_y2 = .2, x2_xy = .3, y2_xy = .4)}, where x_y is the covariance between x and y, and so on. All these covariances have to provided with exactly these names, otherwise the function will print an error.}
 
-\item{df}{Degrees of freedom for the calculation of a1 to a4 confidence intervals. The df are the residual dfs of the model (df = n - estimated parameters). For the full polynomial model, this is n - 6 (folllowing parameters are estimated: Intercept, x, y, xy, x2, y2).}
+\item{df}{Degrees of freedom for the calculation of a1 to a4 confidence intervals. The df are the residual dfs of the model (df = n - estimated parameters). For the full polynomial model, this is n - 6 in a regular regression (the following parameters are estimated: Intercept, x, y, xy, x2, y2). \code{df} should be a single number.}
 
 \item{model}{If x is an RSA object, this parameter specifies the model from which to extract the coefficients}
 }
 \value{
 Returns surface parameters a1 to a4. If an RSA object or SE, COV and df are provided, also significance test and standard errors of a1 to a4 are reported.
-The stationary point (X0, Y0, and Z0).
-First principal axis (PA) relative to the X-Y plane (p10 = intercept, p11 = slope), second PA (p20 = intercept, p21 = slope).
+The stationary point (X0, Y0, and Z0). 
+First principal axis (PA) relative to the X-Y plane (p10 = intercept, p11 = slope), second PA (p20 = intercept, p21 = slope). 
 M = eigenvectors, l = eigenvalues, L = lambda matrix
 as1X to as4X: surface parameters of the PA, relative to X values
 as1Y to as4Y: surface parameters of the PA, relative to Y values
@@ -50,6 +50,16 @@ No details so far.
 # get surface parameters from known parameters
 # example from Shanock et al. (2010), p. 548, Table 2
 RSA.ST(x=-.23, y=.77, x2=-.07, y2=-.10, xy=.27)
+
+
+## Compute standard errors and p values for surface parameters 
+## from external regression coefficients:
+# standard errors for coefficients
+SE <- c(x=.09, y=.09, x2=.07, y2=.07, xy=.11)
+# covariances for specific coefficients:
+COV <- c(x_y= -.000, x2_y2 = .001, x2_xy = -.003, y2_xy = -.004)
+RSA.ST(x = .131, y = .382, x2 = .074, xy = .002, y2 = .039, SE=SE, COV=COV, df=181)
+
 
 # Get surface parameters from a computed RSA object
 set.seed(0xBEEF)
