@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/confint.R
 \name{confint.RSA}
 \alias{confint}
@@ -32,6 +32,7 @@ Computes confidence intervals for RSA parameters, standard or bootstrapped (usin
 There are two ways of getting bootstrapped CIs and p-values in the RSA package If you use the option \code{se="boot"} in the \code{\link{RSA}} function, \code{lavaan} provides CIs and p-values based on the bootstrapped standard error (\emph{not} percentile bootstraps). If you use \code{confint(..., method="boot")}, in contrast, you get CIs and p-values based on percentile bootstrap.
 }
 \examples{
+
 set.seed(0xBEEF)
 n <- 300
 err <- 2
