@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/getPar.R
 \name{getPar}
 \alias{getPar}
@@ -24,6 +24,7 @@ Retrieves several variables from an RSA object
 None so far.
 }
 \examples{
+
 set.seed(0xBEEF)
 n <- 300
 err <- 2
