@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.0): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/plot.RSA.R
 \name{plotRSA}
 \alias{plotRSA}
@@ -97,22 +97,22 @@ plotRSA(x = 0, y = 0, x2 = 0, y2 = 0, xy = 0, w = 0, wx = 0,
 
 \item{cex.main}{Factor for main title size}
 
-\item{points}{A list of parameters which define the appearance of the raw scatter points:
-    \itemize{
-        \item data: Data frame which contains the coordinates of the raw data points. First column = x, second = y, third = z. This data frame is automatically generated when the plot is based on a fitted RSA-object
-        \item show = TRUE: Should the original data points be overplotted?
-        \item color = "black": Color of the points
+\item{points}{A list of parameters which define the appearance of the raw scatter points: 
+\itemize{
+    \item data: Data frame which contains the coordinates of the raw data points. First column = x, second = y, third = z. This data frame is automatically generated when the plot is based on a fitted RSA-object
+    \item show = TRUE: Should the original data points be overplotted?
+    \item color = "black": Color of the points
         \item value="raw": Plot the original z value, "predicted": plot the predicted z value
-        \item jitter = 0: Amount of jitter for the raw data points. For z values, a value of 0.005 is reasonable
-        \item cex = .5: multiplication factor for point size
+    \item jitter = 0: Amount of jitter for the raw data points. For z values, a value of 0.005 is reasonable
+    \item cex = .5: multiplication factor for point size
         \item out.mark = FALSE: If set to TRUE, outliers according to Bollen & Jackman (1980) are printed as red X symbols, but only when they have been removed in the RSA function: \code{RSA(..., out.rm=TRUE)}.
-            \itemize{
-                \item If out.rm == TRUE (in RSA()) and out.mark == FALSE (in plotRSA()), the outlier is removed from the model and *not plotted* in plotRSA.
-                \item If out.rm == TRUE (in RSA()) and out.mark == TRUE (in plotRSA()), the outlier is removed from the model but plotted and marked in plotRSA.
-                \item If out.rm == FALSE (in RSA()): Outliers are not removed and cannot be plotted.
-                \item Example syntax: \code{plotRSA(r1, points=list(show=TRUE, out.mark=TRUE))}
-        }
+        \itemize{
+            \item If out.rm == TRUE (in RSA()) and out.mark == FALSE (in plotRSA()), the outlier is removed from the model and *not plotted* in plotRSA.
+            \item If out.rm == TRUE (in RSA()) and out.mark == TRUE (in plotRSA()), the outlier is removed from the model but plotted and marked in plotRSA.
+            \item If out.rm == FALSE (in RSA()): Outliers are not removed and cannot be plotted.
+            \item Example syntax: \code{plotRSA(r1, points=list(show=TRUE, out.mark=TRUE))}
     }
+}
 As a shortcut, you can also set \code{points=TRUE} to set the defaults.}
 
 \item{fit}{Do not change that parameter (internal use only)}
@@ -137,8 +137,7 @@ As a shortcut, you can also set \code{points=TRUE} to set the defaults.}
 
 \item{pal.range}{Should the color range be scaled to the box (\code{pal.range = "box"}, default), or to the min and max of the surface (\code{pal.range = "surface"})? If set to "box", different surface plots can be compared along their color, as long as the zlim is the same for both.}
 
-\item{pad}{Pad controls the margin around the figure (positive numbers: larger margin, negative numbers: smaller margin)
-#'}
+\item{pad}{Pad controls the margin around the figure (positive numbers: larger margin, negative numbers: smaller margin)}
 
 \item{demo}{Do not change that parameter (internal use only)}
 
